Move  CaseViewJsonExtract.java to model AND Fix jackson bug